[tool.poetry]
name = "prompt-generator"
version = "0.1.0"
description = ""
authors = ["Grimmer <grimmer0125@gmail.com>"]
readme = "README.md"
packages = [{include = "prompt_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.32.0"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
